# mcp-screenshot

./: BUILD.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
src/backend/: kms.rs  mod.rs  pixel_format.rs  xcap.rs
