[package]
name = "mcp-screenshot"
version = "0.1.0"
edition = "2024"

[features]
default = ["xcap-backend"]
xcap-backend = ["dep:xcap"]
kms = ["dep:drm", "dep:drm-fourcc", "dep:rustix"]

[dependencies]
rmcp = { version = "0.13", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
xcap = { version = "0.8", optional = true }
image = "0.25"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
drm = { version = "0.14", optional = true }
drm-fourcc = { version = "2.2", optional = true }
rustix = { version = "0.38", features = ["mm"], optional = true }
