[package]
name = "mcp-screenshot"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop"]
desktop = ["dep:xcap"]
kms = ["dep:drm", "dep:drm-fourcc", "dep:rustix"]
http = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:tokio-util", "tokio/net"]

[dependencies]
rmcp = { version = "0.13", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
xcap = { version = "0.8", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
drm = { version = "0.14", optional = true }
drm-fourcc = { version = "2.2", optional = true }
rustix = { version = "0.38", features = ["mm"], optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }
